# Solana_Projects

./: README.md
Calculations/: package.json
Calculations/src/square/src/: lib.rs
Calculations/src/sum/src/: lib.rs
Calculator_Dapp/: README.md  package-lock.json  package.json
Calculator_Dapp/scripts/: cicd.sh
Calculator_Dapp/src/client/: divide.ts  math.ts  multiply.ts  square.ts  subtract.ts
Calculator_Dapp/src/divide/: Cargo.toml
Calculator_Dapp/src/divide/src/: lib.rs
Calculator_Dapp/src/multiply/: Cargo.toml
Calculator_Dapp/src/multiply/src/: lib.rs
Calculator_Dapp/src/square/: Cargo.toml
Calculator_Dapp/src/square/src/: lib.rs
Calculator_Dapp/src/subtract/: Cargo.toml
Calculator_Dapp/src/subtract/src/: lib.rs
Calculator_Dapp/src/sum/: Cargo.toml
Calculator_Dapp/src/sum/src/: lib.rs
My-Dapp/: package-lock.json  package.json
My-Dapp/contract/program/: program-keypair.json
My-Dapp/src/client/: main.ts
My-Dapp/src/program/: Cargo.toml
